--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 			</ul>
 		</nav>
 		<div>
-			<img src="assets/img/Vector1.svg" alt="search" class="header__logo" />
-			<img src="assets/img/Group.svg" alt="cart" class="header__logo" />
+			<a href="#"><img src="assets/img/Vector1.svg" alt="search" class="header__logo" /></a>
+			<a href="#"><img src="assets/img/Group.svg" alt="cart" class="header__logo" /></a> 
 		</div>
 	</header>
 	<main class="main-page">
@@ -752,7 +752,7 @@
 			</div>
 		</div>
 	</address>
-	<!-- footer -->
+    <script src="assets/js/index.js"></script>
 </body>
 
 </html>
