--- a/index.html
+++ b/index.html
@@ -734,11 +734,10 @@
 			<div class="network_logo">
 				<a href="#"><img src="assets/img/logo/facebook_logo.svg" alt="иконка фейсбук" /></a><a href="#"><img src="assets/img/logo/Insta_logo.svg"
 						alt="иконка инстаграмм" /></a><a href="#"><img src="assets/img/logo/twitter_logo.svg"
-						alt="иконка твиттер" /></a><a href="#"><img src="assets/img/logo2.svg" alt="иконка" /></a>
+						alt="иконка твиттер" /></a><a href="#"><img src="assets/img/logo/logo2.svg" alt="иконка" /></a>
 			</div>
 		</div>
 	</address>
-    <script src="assets/js/index.js"></script>
 </body>
 
 </html>
